force-app/main/default/objects/apxio__Student__c/fields/apxio__Home_Planet__c.field-meta.xml
<CustomField>
    <fullName>apxio__Home_Planet__c</fullName>
    <description>The planet this student is a resident of</description>
    <label>Home Planet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>apxio__Planets</valueSetName>
    </valueSet>
</CustomField>