force-app/main/default/objects/apxio__Student__c/fields/apxio__Phone__c.field-meta.xml
<CustomField>
    <fullName>apxio__Phone__c</fullName>
    <description>Student phone</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>